# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-11-17 15:00:33 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-24

    Summary:
      merge csv documentation work from piotr
    Revision:
      itools--main--0.12--patch-24

    Patches applied:
    
     * piotr@macuk.pl--public/itools--csv--0.12--patch-6
       Sections added, more schema description, file structure table
    

    modified files:
     Changelog doc/csv.tex

    new patches:
     piotr@macuk.pl--public/itools--csv--0.12--patch-6


2005-11-16 19:12:56 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-23

    Summary:
      csv, add comment about the virtual handlers issue
    Revision:
      itools--main--0.12--patch-23


    modified files:
     Changelog csv/itools_csv.py


2005-11-16 19:09:13 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-22

    Summary:
      resources, add "truncate" method (fixes csv test case)
    Revision:
      itools--main--0.12--patch-22


    modified files:
     Changelog handlers/File.py resources/base.py resources/file.py
     resources/memory.py resources/zodb.py


2005-11-16 18:53:48 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-21

    Summary:
      csv, add method "get_nrows" to the API
    Revision:
      itools--main--0.12--patch-21

    And use it to show that the "set_state_in_file_resource" test case
    is broken.

    modified files:
     Changelog csv/itools_csv.py csv/test_itools_csv.py


2005-11-16 18:40:46 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-20

    Summary:
      csv, add "Row.__getattr__" method (not working yet)
    Revision:
      itools--main--0.12--patch-20

    This shows how to solve the "access by name" test case (e.g. "row.name"),
    but does not works yet because it requires a change in the design, and I
    am not sure how it should be.

    modified files:
     Changelog csv/itools_csv.py

